# MOEX_trading_agent

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  start.sh
.streamlit/: config.toml
app/: __init__.py  config.py  main.py
app/agents/: anomaly_detector.py  base.py  consensus_compare.py  hmm_regime.py  market_mood.py  mean_reversion.py  meta_classifier.py  meta_per_session.py  microstructure_gates.py  news_llm.py  pair_trader.py  ta_catboost.py  ta_indicators.py  ta_trader.py
app/backtest/: __init__.py  engine.py  synthetic.py
app/dashboard/: metrics_writer.py  snapshot_renderer.py  static_server.py
app/data/: algopack_client.py  candle_store.py  csv_loader.py  iss_client.py  supercandles.py
app/dispatcher/: aggregator.py  dispatcher.py  entry_guard.py  signal.py  tier_classifier.py
app/execution/: arenago_client.py  broker_reconciler.py  order_manager.py  turnover_tracker.py
app/llm/: polza_client.py
app/memory/: morning_plan.py  rag_store.py  reflection.py  reflexive_overrides.py  trade_outcome_rag.py
app/news/: consensus_rag.py  dedup.py  embeddings.py  feeds_config.py  history.py  ingestion_bus.py  local_sentiment.py  material_filter.py  ticker_tagger.py
app/recovery/: __init__.py  state_manager.py
app/risk/: adaptive_regime.py  broker_health_monitor.py  circuit_breakers.py  equity_floor.py  partial_exit.py  position_book.py  risk_manager.py  session_aware_sizing.py  sl_tp_rules.py  stop_loss_monitor.py  trailing_stop.py
app/training/: __init__.py  cross_validation.py  dataset_builder.py  evening_pipeline.py  feature_extractor.py  labeling.py  online_retrain.py
app/utils/: async_cache.py  db_pool.py  logging.py  retry.py  scheduler.py  session_profile.py  sessions.py
data/: feeds.db
data/models/: catboost_ta.cbm  catboost_ta.metrics.json  hmm.pkl  pair_state.json
data/rag/: consensus_2026-05-26.json  embeddings.npy  (+1 more)
notebooks/: A_trade_by_trade.ipynb  B_signal_flow.ipynb  C_market_regime.ipynb
scripts/: bootstrap_db.py  daily_trade_analyzer.py  noise_review.py  refit_pairs.py  strategy_backtest.py  train_catboost.py  train_hmm.py  train_meta_v2.py
tests/: conftest.py
(+119 files in other folders)
