[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "moex-trader"
version = "1.5.0"
description = "MOEX AI Hackathon 2026 — autonomous intraday trader for ArenaGo"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Team 404: Loss Not Found" }]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "uvloop>=0.19.0",
    "aiofiles>=23.0.0",
    "openai>=1.40.0",
    "pydantic>=2.7.0",
    "orjson>=3.10.0",
    "msgspec>=0.18.0",
    "feedparser>=6.0.11",
    "selectolax>=0.3.21",
    "pdfplumber>=0.11.0",
    "natasha>=1.6.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "pandas>=2.2.0",
    "pandas-ta>=0.3.14b",
    "ta-lib>=0.4.30",
    "statsmodels>=0.14.0",
    "yfinance>=0.2.40",
    "moexalgo>=2.5.9",
    "hmmlearn>=0.3.2",
    "catboost>=1.2.5",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "datasketch>=1.6.5",
    "aiosqlite>=0.20.0",
    "sqlite-utils>=3.37.0",
    "apscheduler>=3.10.4",
    "python-dotenv>=1.0.1",
    "python-json-logger>=2.0.7",
    "streamlit>=1.36.0",
    "streamlit-autorefresh>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "hypothesis>=6.100.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
    "pytest-cov>=5.0.0",
    "pre-commit>=3.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".venv",
    "build",
    "dist",
    "data",
    "docs",
    "catboost_info",
    "notebooks",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP", "SIM"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501", "B011", "B017", "B018", "C401", "C405", "SIM117"]
"scripts/**" = ["E501", "C401", "C405"]
"app/dashboard/**" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
log_cli = true
log_cli_level = "INFO"

[tool.hatch.build.targets.wheel]
packages = ["app"]
